<resources>
    <string name="app_name">هلیوم پلاس</string>
    <string name="label_register">ثبت نام</string>
    <string name="label_register_bold"><b>ثبت نام</b></string>
    <string name="label_login">ورود</string>
    <string name="label_login_bold"><b>ورود</b></string>
    <string name="label_bookmark">بوکمارک ها</string>
    <string name="label_myArticles">مقالات من</string>
    <string name="label_users">کاربران</string>
    <string name="label_tags">تگ ها</string>
    <string name="label_posts">پست ها</string>
    <string name="label_newArticle">مقاله جدید</string>
    <string name="label_showArticle">نمایش مقاله</string>
    <string name="label_login_screen">Login Screen</string>
    <string name="label_profile">پروفایل</string>
    <string name="label_search">جستجو</string>
    <string name="label_home">خانه</string>
    <string name="label_helium_info">هلیوم پلاس بستری برای اشتراک گذاری ایده‌ها و فکر افراد پیشرو در زمینه علم و دانش</string>
    <string name="label_mobile_number">شماره موبایل</string>
    <string name="label_password">کلمه عبور</string>
    <string name="label_dontHaveAccount">حساب کاربری ندارید؟</string>
    <string name="label_dontHaveAccount_bold"><b>حساب کاربری ندارید؟</b></string>
    <string name="label_registerStr_fa">ثبت نام کنید.</string>
    <string name="label_registerStr_bold"><b>ثبت نام کنید.</b></string>
    <string name="label_registerTitle"><b>ثبت نام</b></string>
    <string name="label_isRegister">قبلا ثبت نام کرده اید؟</string>
    <string name="label_loginStr_bold"><b>وارد شوید.</b></string>
    <string name="label_name">نام</string>
    <string name="label_family">نام خانوادگی</string>
    <string name="label_username">نام کاربری</string>
    <string name="label_email">پست الکترونیک</string>
    <string name="label_search_bar">جستجو …</string>
    <string name="label_confirmRegisterStr">ثبت نام شما با موفقیت انجام شد.</string>
    <string name="label_writer_time">%s • %s</string>
    <string name="label_add_tag">افزودن تگ</string>
    <string name="label_share_new_article">انتشار مقاله جدید</string>
    <string name="label_title_new_article">عنوان مقاله خود را وارد کنید</string>
    <string name="label_desc_new_article">متن مقاله خود را وارد کنید</string>
    <string name="label_share_article">انتشار مقاله</string>
    <string name="label_choose_tag">انتخاب تگ</string>
    <string name="label_choose">انتخاب</string>
    <string name="label_technology">تکنولوژی</string>
    <string name="label_internet_error">لطفا اتصال اینترنت خود را بررسی کنید</string>
    <string name="label_retry">تلاش مجدد</string>
    <string name="label_ignore">رد کردن</string>
    <string name="label_added_article_to_bookmark">مقاله به بوکمارک ها اضافه شد</string>
    <string name="label_exit">از خروج مطمئنید؟</string>
    <string name="label_fake_title_post">سلام اسنپدراگون تا میتوانی دلی بدست اور که دل شکستن هنر نمی باشد سعدیا مرد نکونام نمیرد هرگز مرده آن سیلبسیبسیبسیبسیبسیبسیبسیبسیب است که نامش به نکویی نبرند</string>
    <string name="label_fake_title_post_test">تست </string>
    <string name="label_time_fake">28 فروردین 1401</string>
    <string name="label_writer_fake">سبحان بازوبندی</string>
    <string name="label_fake_writer_mahdi">مهدی توکلی خراسانی</string>
    <string name="label_mahdi">مهدی توکلی</string>
    <string name="label_in_progress">در حال انتشار</string>
    <string name="label_tag_fake_one">نجوم شناسی</string>
    <string name="label_tag_fake_two">تکنولوژِی</string>
    <string name="label_tag_fake_three">نانوتکنولوژی</string>
    <string name="label_tag_fake_four">مکانیک</string>
    <string name="label_tag_fake_five">تست</string>
    <string name="label_appError">ارتباط برقرار نشد</string>
    <string name="label_no_remote_no_local">عدم ارتباط ، عدم وجود مقاله در حافظه محلی</string>
    <string name="label_unknown_error">خطای ناشناخته. گزارش دهید</string>
    <string name="label_name_length_error">نام باید حداقل 3 حرف باشد</string>
    <string name="label_name_persian_error">نام باید شامل حروف فارسی باشد</string>
    <string name="label_last_name_length_error">نام خانوادگی باید حداقل 3 حرف باشد</string>
    <string name="label_last_name_persian_error">نام خانوادگی باید فارسی باشد</string>
    <string name="label_username_length_error">نام کاربری باید حداقل 6 حرف باشد</string>
    <string name="label_username_pattern_error">نام کاربری باید شامل _ و حروف انگلیسی و اعداد باشد</string>
    <string name="label_phone_number_error">شماره موبایل معتبر نیست</string>
    <string name="label_email_error">ایمیل معتبر نیست</string>
    <string name="label_password_error">پسورد معتبر نیست</string>
    <string name="label_password_length_error">رمز عبور باید حداقل 6 حرف باشد</string>
    <string name="label_validation_true">تمامی فیلد ها باید درست باشند</string>
    <string name="label_no_connection_no_exists_user">عدم ارتباط ، عدم وجود کاربر در حافظه محلی</string>
    <string name="label_choose_one_tag">یک تگ انتخاب کنید</string>
    <string name="label_title_length">عنوان مقاله کوتاه است</string>
    <string name="label_desc_length">متن مقاله کوتاه است</string>
    <string name="label_success_new_article">مقاله منتشر شد</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>