<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_post_frSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/label_posts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_tags_frSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_tags_frSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/label_tags"
        app:layout_constraintEnd_toStartOf="@id/btn_post_frSearch"
        app:layout_constraintStart_toEndOf="@id/btn_users_frSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_users_frSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/label_users"
        app:layout_constraintEnd_toStartOf="@id/btn_tags_frSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/cv_searchFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_tags_frSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>