<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal92_MainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal84_MainFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal92_MainFragment"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cv_mainFragment"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/label_main_fragment"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_profile_activityMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/label_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search_activityMain"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal92_MainFragment" />

    <Button
        android:id="@+id/btn_search_activityMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/label_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_home_activityMain"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_profile_activityMain"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal92_MainFragment" />

    <Button
        android:id="@+id/btn_home_activityMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:text="@string/label_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/btn_search_activityMain"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal92_MainFragment" />


</androidx.constraintlayout.widget.ConstraintLayout>