<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gray_dark">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalStart_snackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guid_0.04Start_percent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_verticalEnd_snackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/guid_0.04End_percent" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@drawable/tag_gray"
            app:layout_constraintEnd_toStartOf="@id/gl_verticalEnd_snackLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_desc_SnackLayout"
            android:layout_marginTop="@dimen/margin_16"
            android:src="@drawable/ic_error"
            android:padding="@dimen/margin_4"
            android:id="@+id/img_icon_snackLayout" />

        <TextView
            android:id="@+id/tv_desc_SnackLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_marginEnd="@dimen/margin_8"
            style="@style/custom_textView_desc"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintEnd_toStartOf="@id/img_icon_snackLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_verticalStart_snackLayout"
            android:text="@string/label_internet_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_okAction_snackLayout"
            app:layout_constraintStart_toEndOf="@id/gl_verticalStart_snackLayout"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_SnackLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/label_retry"
            style="@style/custom_textView_Action_snack"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cancelAction_snackLayout"
            app:layout_constraintStart_toEndOf="@id/tv_okAction_snackLayout"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_SnackLayout"
            android:text="@string/label_ignore"
            android:layout_marginStart="@dimen/margin_16"
            style="@style/custom_textView_Action_snack"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>