<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".register_Login.RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradiant_black_bottom_to_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical50_registerfragment"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guid_0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_verticalStart_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guid_0.04Start_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_verticalEnd_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/guid_0.04End_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal075_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical63_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal14_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <ImageView
        android:id="@+id/iv_logo_registerfragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal14_registerfragment"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical50_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@+id/gl_horizontal075_registerfragment" />

    <TextView
        android:id="@+id/tv_registerTitle_registerfragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/label_registerTitle"
        android:textColor="@color/white"
        android:textSize="@dimen/size30"
        app:layout_constraintStart_toStartOf="@id/iv_logo_registerfragment"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_registerfragment" />

    <TextView
        android:id="@+id/tv_isRegister_registerfragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="@dimen/size16"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:text="@string/label_isRegister"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tv_login_registerfragment"
        app:layout_constraintStart_toStartOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/tv_registerTitle_registerfragment" />

    <TextView
        android:id="@+id/tv_login_registerfragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:autoSizeMaxTextSize="@dimen/size16"
        android:autoSizeTextType="uniform"
        android:gravity="start"
        android:maxLines="1"
        android:text="@string/label_loginStr_bold"
        android:textColor="@color/blue_400"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical63_registerfragment"
        app:layout_constraintStart_toEndOf="@+id/tv_isRegister_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/tv_registerTitle_registerfragment" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/tv_isRegister_registerfragment"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal87_registerfragment">

    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_registerfragment"
        style="@style/custom_inputEditTextLayout_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/tv_isRegister_registerfragment"
        app:startIconDrawable="@drawable/ic_namename">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/custom_inputEditText_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_name"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username_registerfragment"
        style="@style/custom_inputEditTextLayout_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/til_name_registerfragment"
        app:startIconDrawable="@drawable/ic_username">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/custom_inputEditText_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_username"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_registerfragment"
        style="@style/custom_inputEditTextLayout_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/til_username_registerfragment"
        app:startIconDrawable="@drawable/ic_email">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/custom_inputEditText_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_email"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_mobilenumber_registerfragment"
        style="@style/custom_inputEditTextLayout_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/til_email_registerfragment"
        app:startIconDrawable="@drawable/ic_mobilenumber">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/custom_inputEditText_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_mobilenumber"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password_registerfragment"
        style="@style/custom_inputEditTextLayout_gray"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/til_mobilenumber_registerfragment"
        app:startIconDrawable="@drawable/ic_pass">


        <com.google.android.material.textfield.TextInputEditText
            style="@style/custom_inputEditText_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/label_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal87_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal95_registerfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".97" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_registerFragment"
        style="@style/custom_button_blue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/label_register_bold"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal95_registerfragment"
        app:layout_constraintDimensionRatio="@dimen/btn_ratio_312_48"
        app:layout_constraintEnd_toStartOf="@+id/gl_verticalEnd_registerfragment"
        app:layout_constraintStart_toEndOf="@id/gl_verticalStart_registerfragment"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal87_registerfragment" />

</androidx.constraintlayout.widget.ConstraintLayout>